add example play app using springtester

--- a/samples-and-tests/demo/conf/dependencies.yml
+++ b/samples-and-tests/demo/conf/dependencies.yml
@@ -8,6 +8,6 @@ require:
 repositories:
     - My modules:
         type:       local
-        artifact:   ${application.path}/../../../[module]
+        artifact:   "${application.path}/../../../[module]-[revision]"
         contains:
             - springtester
